--- a/src/scss/partials/_globals.scss
+++ b/src/scss/partials/_globals.scss
@@ -10,12 +10,19 @@ body {
   background-color: variables.$lg-clr;
   color: variables.$drk-clr;
   overflow-x: hidden;
+  font-size: 16px;
 }
 
 .logo {
   font-size: 1.3em;
   font-weight: 800;
   font-family: 'Montserrat', sans-serif;
+}
+
+h1 {
+  font-size: 1.8em;
+  font-weight: 800;
+  font-family: variables.$scdr-ft;
 }
 
 h2 {
