--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -23,8 +23,7 @@ nav {
 }
 
 .header-text {
-  padding: 7em 0;
-  width: 80%;
+  padding: 7em 1em;
   max-width: 43em;
   margin: 0 auto;
   text-align: center;
@@ -32,5 +31,6 @@ nav {
 
   p {
     margin-top: 1em;
+    width: 80%;
   }
 }
