"Small screen styles complete"

--- a/src/scss/partials/_agents.scss
+++ b/src/scss/partials/_agents.scss
@@ -35,5 +35,15 @@
       border-top-left-radius: 2px;
       border-top-right-radius: 2px;
     }
+
+    .agent-1 {
+      object-position: 0 30%;
+    }
+    .agent-2 {
+      object-position: 0 60%;
+    }
+    .agent-4 {
+      object-position: 0 30%;
+    }
   }
 }
