--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -30,7 +30,8 @@ nav {
   color: variables.$lg-clr;
 
   p {
-    margin-top: 1em;
     width: 80%;
+    margin: 1em auto 0;
+    font-size: 1.2em;
   }
 }
