--- a/src/scss/partials/_properties-section.scss
+++ b/src/scss/partials/_properties-section.scss
@@ -2,45 +2,59 @@
 
 #properties {
   background-color: variables.$md-clr;
-}
 
-.carousel-card {
-  padding-bottom: 3em;
-  background-color: rgba(0, 0, 0, 0.8);
-  border-radius: 2px;
-  color: variables.$lg-clr;
+  .carousel-card {
+    padding-bottom: 4em;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 2px;
+    color: variables.$lg-clr;
 
-  *:not(img) {
-    margin: 10px 0 0 16px;
+    *:not(.property-price, img) {
+      margin: 10px 0 0 1rem;
+    }
+
+    .w-100 {
+      height: 300px;
+      object-fit: cover;
+      border-top-left-radius: 2px;
+      border-top-right-radius: 2px;
+    }
+
+    .property-price {
+      font-weight: bold;
+      font-size: 1.3em;
+      color: variables.$lg-accent-clr;
+      margin: 1em 0 0 1rem;
+      font-size: 1rem;
+    }
+
+    address {
+      font-size: 0.8em;
+    }
   }
 
-  .w-100 {
-    height: 300px;
-    object-fit: cover;
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
+  & .carousel-control-next,
+  & .carousel-control-prev {
+    width: 5%;
+    display: grid;
+    place-content: center;
+    color: #fff;
+    opacity: 0.8;
+    font-size: 2.3em;
   }
 
-  .property-price {
-    font-weight: bold;
-    font-size: 1.1em;
-    color: variables.$accent-clr;
+  & .carousel-control-prev {
+    padding-left: 12px;
+  }
+  & .carousel-control-next {
+    padding-right: 12px;
   }
 
-  address {
-    font-size: 0.8em;
-  }
-}
-
-.carousel-control-next,
-.carousel-control-prev {
-  opacity: 1;
-}
-
-.carousel-indicators {
-  [data-bs-target] {
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
+  .carousel-indicators {
+    [data-bs-target] {
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+    }
   }
 }
