--- a/src/scss/partials/_testimonials.scss
+++ b/src/scss/partials/_testimonials.scss
@@ -9,21 +9,18 @@
     display: grid;
     place-content: center;
 
-    & .carousel-control-prev-icon,
-    & .carousel-control-next-icon {
-      color: #000;
-      opacity: 0.4;
-    }
-
     & .carousel-control-next,
     & .carousel-control-prev {
       width: 5%;
       display: grid;
       place-content: center;
+      color: #000;
+      opacity: 0.4;
+      font-size: 2.3em;
     }
 
     .carousel-inner {
-      width: 80%;
+      width: 90%;
       margin: 0 auto;
       overflow: hidden;
 
@@ -47,7 +44,7 @@
         }
 
         .comment {
-          width: 100%;
+          width: 95%;
           max-width: 400px;
           margin: 0 auto 1.8em;
         }
