--- a/src/scss/partials/_globals.scss
+++ b/src/scss/partials/_globals.scss
@@ -1,4 +1,4 @@
-@use "variables";
+@use 'variables';
 
 :root {
   scroll-behavior: smooth;
@@ -10,7 +10,6 @@ body {
   background-color: variables.$lg-clr;
   color: variables.$drk-clr;
   overflow-x: hidden;
-  font-size: 16px;
 }
 
 h1 {
@@ -20,25 +19,26 @@ h1 {
 }
 
 h2 {
-  font-size: 1.75em;
+  font-size: 1.6em;
   font-weight: 600;
   font-family: variables.$scdr-ft;
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 1.3em;
+  font-weight: bold;
   font-family: variables.$scdr-ft;
 }
 
 p {
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: 400;
 }
 
 i:not(.fa-bars, .fa-window-close, .social-icon) {
   display: block;
   color: variables.$accent-clr;
-  font-size: 3em;
+  font-size: 2.5em;
 }
 
 // Changing BT carousel icon
