--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,15 +1,15 @@
-@use "partials/fonts";
-@use "partials/variables";
-@use "partials/reset";
-@use "partials/globals";
-@use "partials/utilities";
-@use "partials/sections/header";
-@use "partials/overlay-menu";
-@use "partials/sections/how-it-works";
-@use "partials/sections/properties";
-@use "partials/sections/agents";
-@use "partials/sections/company-info";
-@use "partials/sections/services";
-@use "partials/sections/testimonials";
-@use "partials/sections/contact";
-@use "partials/sections/footer";
+@use 'partials/fonts';
+@use 'partials/variables';
+@use 'partials/reset';
+@use 'partials/globals';
+@use 'partials/utilities';
+@use 'partials/sections/header';
+@use 'partials/overlay-menu';
+@use 'partials/sections/how-it-works';
+@use 'partials/sections/properties';
+@use 'partials/sections/agents';
+@use 'partials/sections/company-info';
+@use 'partials/sections/services';
+@use 'partials/sections/testimonials';
+@use 'partials/sections/contact';
+@use 'partials/sections/footer';
