--- a/src/scss/partials/sections/_header.scss
+++ b/src/scss/partials/sections/_header.scss
@@ -1,7 +1,7 @@
 @use '../variables';
 
 header {
-  background-image: url(/src/images/header-bg.jpg);
+  background-image: url(/src/images/header.jpg);
   padding-bottom: 3em;
   background-size: cover;
   background-position: center bottom;
