--- a/src/scss/partials/_utilities.scss
+++ b/src/scss/partials/_utilities.scss
@@ -127,3 +127,12 @@
   background-color: variables.$accent-clr;
   animation-duration: 1s;
 }
+
+.carousel-btn {
+  border: none;
+  outline: none;
+  padding: 0.3em;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: variables.$lg-clr;
+  font-size: 0.6em;
+}
