--- a/src/scss/partials/_overlay-menu.scss
+++ b/src/scss/partials/_overlay-menu.scss
@@ -60,6 +60,11 @@
       }
     }
   }
+
+  @media (min-width: variables.$desktop) {
+    display: none;
+    visibility: none;
+  }
 }
 
 .menu-overlay.active {
