--- a/src/scss/partials/_overlay-menu.scss
+++ b/src/scss/partials/_overlay-menu.scss
@@ -4,6 +4,7 @@ header nav .menu-overlay {
   background-color: variables.$md-clr;
   position: absolute;
   display: none;
+  visibility: hidden;
   top: 0;
   right: 0;
   width: 50%;
